fix(plugins/plugin-client-common): remove extra margin-top in wizard header description

--- a/plugins/plugin-client-common/web/scss/components/Wizard/_index.scss
+++ b/plugins/plugin-client-common/web/scss/components/Wizard/_index.scss
@@ -43,6 +43,12 @@
   }
 }
 
+@include WizardDescription {
+  p:first-child {
+    margin-top: 0;
+  }
+}
+
 @include WizardHeaderActionButtons {
   position: absolute;
   top: 1em;
